# Cpp_exercises_with_solutions

./: .gitignore  .~lock.my_personal_cheat_sheet_C++.odt#  README.md  c++_advanced_notes.odt  functions_and_modules.txt  my_personal_cheat_sheet_C++.odt
STL_Algorithm/: deque_exercise_hackerrank  deque_exercise_hackerrank.cpp  lower_bound_hackerrank  lower_bound_hackerrank.cpp  map_exercise_hackerrank  map_exercise_hackerrank.cpp  set_exercise_hackerrank  set_exercise_hackerrank.cpp
algorithm_exercises/: abacaba_pattern  abacaba_pattern.cpp  algorithm_interesting_task_postman_Harry  algorithm_interesting_task_postman_Harry.cpp  algorithm_kindergarden_adventures  algorithm_kindergarden_adventures.cpp  algorithm_minimum_adds_to_palindrome  algorithm_minimum_adds_to_palindrome.cpp  algorithm_number_of_ways_between_points  algorithm_number_of_ways_between_points.cpp  algorithm_numbers_in_row  algorithm_numbers_in_row.cpp  algorithm_pascal_triangle  algorithm_pascal_triangle.cpp  all_pairs_that_sum_to_a_given_number  all_pairs_that_sum_to_a_given_number.cpp  append_and_delete  append_and_delete.cpp  briefcase_lock  briefcase_lock.cpp  coin_problem  coin_problem.cpp  distance_to_nearest_string  distance_to_nearest_string.cpp  divisible_sum_pairs  divisible_sum_pairs.cpp  does_cargo_fit  does_cargo_fit.cpp  (+31 more)
gtest/benchmark/: CMakeLists.txt  googleTest_guide  gtest_guide.cpp  gtest_guide.hpp
gtest/benchmark/test/: CMakeLists.txt  ExampleTests.cpp
gtest/second_attempt/: CMakeLists.txt  fdiv.cpp  main.cpp
gtest/second_attempt/my_test/: CMakeLists.txt  FdivTests.cpp
(+768 files in other folders)
